# SUST-Final-hackathon-project

./: .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  railway.toml
backend/app/: main.py
backend/app/api/: __init__.py  routes_cases.py  routes_coordination.py  routes_metrics.py  routes_simulation.py  routes_telemetry.py
backend/app/domain/: __init__.py
backend/app/domain/coordination/: __init__.py  state_machine.py
backend/app/domain/liquidity/: __init__.py  forecaster.py  historical_analytics.py
backend/app/domain/metrics/: __init__.py  collector.py
backend/app/domain/provider/: __init__.py  ledger.py
backend/app/domain/risk/: __init__.py  anomaly_detector.py
backend/app/domain/shared/: __init__.py  cash_ledger.py
backend/app/infrastructure/: __init__.py  broadcaster.py  database.py
backend/app/simulation/: __init__.py  injection.py  simulation_engine.py
backend/app/simulation/scenarios/: __init__.py  scenario_a.py  scenario_b.py  scenario_d.py
backend/infra/: 001_init.sql  002_hardening.sql  003_case_notes.sql  004_historical_analytics.sql
backend/scripts/: migrate.sh  seed_historical_demo.sh  start.sh
backend/tests/: test_anomaly_detector.py  test_broadcaster.py  test_coordination_fsm.py  test_deployment_config.py  test_historical_analytics.py  test_injection_errors.py  test_liquidity_forecaster.py  test_runtime_metrics.py  test_scenario_a.py  test_simulation_engine.py
docs/: 00_README.md  01_REQUIREMENTS_ANALYSIS.md  03_DATABASE_DESIGN.md  (+5 more)
(+28 files in other folders)
