[tool.poetry]
name = "liquiguard-backend"
version = "0.2.0"
description = "LiquiGuard multi-provider liquidity decision-support backend"
authors = ["LiquiGuard Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = {extras = ["standard"], version = "^0.30"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0"}
asyncpg = "^0.29"
pydantic = "^2.6"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
